ApiGetways/Envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: 
       address: 0.0.0.0
       port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/b" }
                route:  
                  prefix_rewrite: "/basket"
                  cluster: basket_service 
              - match: { prefix: "/r" }
                route:  
                  prefix_rewrite: "/borrow"
                  cluster: borrowing_service 
              - match: { prefix: "/o" }
                route:  
                  prefix_rewrite: "/book"
                  cluster: book_service 
              - match: { prefix: "/i" }
                route:  
                  prefix_rewrite: "/"
                  cluster: identity_service 
              - match: { prefix: "/n" }
                route:  
                  prefix_rewrite: "/hub/notificationhub"
                  cluster: notification_service 
              - match: { prefix: "/g" }
                route:  
                  prefix_rewrite: "/"
                  cluster: aggregator_service 
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  #- name: listener_1
  #  address:
  #    socket_address: 
  #     address: 0.0.0.0
  #     port_value: 10001
  #  filter_chains:
  #  - filters:
  #    - name: envoy.filters.network.http_connection_manager
  #      typed_config:
  #        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
  #        stat_prefix: ingress_http
  #        codec_type: AUTO
  #        route_config:
  #          name: local_route
  #          virtual_hosts:
  #          - name: local_service
  #            domains: ["*"]
  #            routes:
  #            - match: { prefix: "/b" }
  #              route:  
  #                prefix_rewrite: "/basket"
  #                cluster: ssl_basket_service 
  #            - match: { prefix: "/r" }
  #              route:  
  #                prefix_rewrite: "/borrow"
  #                cluster: ssl_borrowing_service 
  #            - match: { prefix: "/o" }
  #              route:  
  #                prefix_rewrite: "/book"
  #                cluster: ssl_book_service 
  #            - match: { prefix: "/i" }
  #              route:  
  #                prefix_rewrite: "/"
  #                cluster: ssl_identity_service 
  #            - match: { prefix: "/n" }
  #              route:  
  #                prefix_rewrite: "/hub/notificationhub"
  #                cluster: ssl_notification_service 
  #            - match: { prefix: "/g" }
  #              route:  
  #                prefix_rewrite: "/"
  #                cluster: ssl_aggregator_service 
  #        http_filters:
  #        - name: envoy.filters.http.router
  #    transport_socket:
  #      name: envoy.transport_sockets.tls
  #      typed_config:
  #        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext        
  #        common_tls_context:
  #          tls_certificates:
  #          - certificate_chain:
  #              filename: "/etc/ssl/certs/https.crt"
  #            private_key:
  #              filename: "/etc/ssl/certs/key.pem"  
  clusters:
  - name: basket_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: basket_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: basket.api
                port_value: 80
  #- name: ssl_basket_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_basket_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: basket.api
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost            
  - name: borrowing_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: borrowing_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: borrowing.api
                port_value: 80
  #- name: ssl_borrowing_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_borrowing_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: borrowing.api
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost            
  - name: book_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: book_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: book.api
                port_value: 80
  #- name: ssl_book_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_book_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: book.api
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost            

  - name: identity_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: identity_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: identityserver
                port_value: 80
  #- name: ssl_identity_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_identity_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: identityserver
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost            

  - name: notification_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: notification_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: borrownotification.api
                port_value: 80
  #- name: ssl_notification_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_notification_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: borrownotification.api
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost            
  - name: aggregator_service
    connect_timeout: 0.25s
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: aggregator_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: bookonline.aggregator
                port_value: 80
  #- name: ssl_aggregator_service
  #  connect_timeout: 0.25s
  #  type: LOGICAL_DNS
  #  dns_lookup_family: V4_ONLY
  #  lb_policy: ROUND_ROBIN
  #  load_assignment:
  #    cluster_name: ssl_aggregator_service
  #    endpoints:
  #    - lb_endpoints:
  #      - endpoint:
  #          address:
  #            socket_address:
  #              address: bookonline.aggregator
  #              port_value: 443
  #  transport_socket:
  #    name: envoy.transport_sockets.tls
  #    typed_config:
  #      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  #      sni: localhost
